fix sonar upload

--- a/.github/workflows/coverage.sonarcloud.yml
+++ b/.github/workflows/coverage.sonarcloud.yml
@@ -9,7 +9,7 @@ on:
       coverage_artifact_folder:
         required: false
         type: string
-        default: 'coverage/lcov.info'
+        default: 'coverage'
       coverage_artifact_name:
         required: false
         type: string
