fix sonar coverage

--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -41,7 +41,7 @@ on:
       coverage_artifact_folder:
         required: false
         type: string
-        default: 'coverage'
+        default: 'coverage/lcov.info'
       coverage_artifact_name:
         required: false
         type: string
