--- a/.github/workflows/deploy.gcr.yml
+++ b/.github/workflows/deploy.gcr.yml
@@ -8,6 +8,10 @@ on:
       project_id:
         required: true
         type: string
+      labels:
+        type: string
+        required: false
+        description: "labels to add to service such as service=banking"
 
 env:
   SERVICE_NAME: ${{ inputs.service_name }}
@@ -24,7 +28,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
+
     # Google Cloud: Configure Workload Identity Federation and generate an access token.
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
@@ -32,16 +37,19 @@ jobs:
         with:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SA_EMAIL }}
+
       # Setup gcloud CLI
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
       - run: echo "$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA"
+
       # Build and push image to Google Container Registry
       - name: Build and Push Container
         run: |-
           gcloud builds submit \
             --tag "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
             --gcs-log-dir gs://artifacts.flexbase-api-development.appspot.com
+      
       # deploy latest container      
       - id: 'deploy'
         uses: 'google-github-actions/deploy-cloudrun@v0'
