--- a/.github/workflows/test.typescript.yml
+++ b/.github/workflows/test.typescript.yml
@@ -34,16 +34,16 @@ jobs:
   initialize:
     runs-on: ubuntu-latest
     steps:
-      - name: Retrieve build cache
-        id: cache
-        uses: actions/cache/restore@v3
-        with:
-          path: ./*
-          key: build-cache-${{ github.sha }}
+      # - name: Retrieve build cache
+      #   id: cache
+      #   uses: actions/cache/restore@v3
+      #   with:
+      #     path: ./*
+      #     key: build-cache-${{ github.sha }}
 
-      - name: Check cache hit
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: exit 1
+      # - name: Check cache hit
+      #   if: steps.cache.outputs.cache-hit != 'true'
+      #   run: exit 1
 
       - name: Create environment variables for npm commands
         if: inputs.package_manager == 'npm'
@@ -57,7 +57,27 @@ jobs:
     needs: initialize
     runs-on: ubuntu-latest
     steps:
-      - run: ${{ env.CLI_TEST_UNIT }}
+      - name: Retrieve build cache
+        id: cache
+        uses: actions/cache/restore@v3
+        with:
+          path: ./*
+          key: build-cache-${{ github.sha }}
+
+      - name: Check cache hit
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: exit 1
+
+      - name: Run tests
+        run: ${{ env.CLI_TEST_UNIT }}
+
+      - name: Upload coverage artifacts
+        if: ${{ inputs.coverage_artifact_folder != ''}}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ inputs.coverage_artifact_name }}
+          path: ${{ inputs.coverage_artifact_folder }}
+          retention-days: 1
 
   component:
     if: ${{ inputs.test_component_command != '' }}
@@ -65,6 +85,17 @@ jobs:
     needs: initialize
     runs-on: ubuntu-latest
     steps:
+      - name: Retrieve build cache
+        id: cache
+        uses: actions/cache/restore@v3
+        with:
+          path: ./*
+          key: build-cache-${{ github.sha }}
+
+      - name: Check cache hit
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: exit 1
+
       - run: ${{ env.CLI_TEST_COMPONENT }}
 
   e2e:
@@ -73,24 +104,35 @@ jobs:
     needs: initialize
     runs-on: ubuntu-latest
     steps:
+      - name: Retrieve build cache
+        id: cache
+        uses: actions/cache/restore@v3
+        with:
+          path: ./*
+          key: build-cache-${{ github.sha }}
+
+      - name: Check cache hit
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: exit 1
+
       - run: ${{ env.CLI_TEST_E2E }}
 
-  artifacts:
-    needs: [unit, component, e2e]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Upload unit test coverage artifacts
-        if: ${{ inputs.coverage_artifact_folder != ''}}
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ inputs.coverage_artifact_name }}
-          path: ${{ inputs.coverage_artifact_folder }}
-          retention-days: 1
+  # artifacts:
+  #   needs: [unit, component, e2e]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Upload unit test coverage artifacts
+  #       if: ${{ inputs.coverage_artifact_folder != ''}}
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: ${{ inputs.coverage_artifact_name }}
+  #         path: ${{ inputs.coverage_artifact_folder }}
+  #         retention-days: 1
 
-      # - name: Upload component test coverage artifacts
-      #   if: ${{ inputs.test_component_command != ''}}
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: ${{ inputs.coverage_artifact_name }}
-      #     path: ${{ inputs.coverage_artifact_folder }}
-      #     retention-days: 1
+  # - name: Upload component test coverage artifacts
+  #   if: ${{ inputs.test_component_command != ''}}
+  #   uses: actions/upload-artifact@v3
+  #   with:
+  #     name: ${{ inputs.coverage_artifact_name }}
+  #     path: ${{ inputs.coverage_artifact_folder }}
+  #     retention-days: 1
