output cypress bin path

--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -67,6 +67,8 @@ jobs:
       CLI_INSTALL:
       CLI_BUILD:
       CLI_LINT:
+    outputs:
+      cypress-bin-path: ${{ steps.cypress-cache-dir.outputs.GITHUB_OUTPUT }}
     steps:
       - name: Create environment variables for yarn commands
         if: inputs.package_manager == 'yarn'
