--- a/.github/workflows/package.typescript.yml
+++ b/.github/workflows/package.typescript.yml
@@ -22,10 +22,9 @@ on:
         required: false
         type: string
         default: ''
+    secrets:
       version_token:
         required: false
-        type: string
-        default: ''
 
 jobs:
   package:
@@ -56,7 +55,7 @@ jobs:
       - name: Update semantic version
         if: ${{ inputs.version_command != '' }}
         env:
-          GITHUB_TOKEN: ${{ inputs.version_token || secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.version_token || secrets.GITHUB_TOKEN }}
         run: ${{ env.CLI_VERSION }}
 
       - name: Packr
