--- a/.github/workflows/test.e2e.typescript.yml
+++ b/.github/workflows/test.e2e.typescript.yml
@@ -31,6 +31,7 @@ env:
   CURRENTS_PROJECT_ID: ${{ secrets.CYPRESS_CLOUD_PROJECT_ID }}
   CURRENTS_RECORD_KEY: ${{ secrets.CYPRESS_CLOUD_KEY }}
   CURRENTS_BUILD_ID: ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt }}
+  BASE_URL: ${{ inputs.base_url }}
 
 jobs:
   test:
@@ -55,5 +56,5 @@ jobs:
           fail-on-cache-miss: true
 
       - name: Run tests
-        run: ${{ env.CLI_TEST }} --ci-build-id ${{ env.CURRENTS_BUILD_ID }} --config baseUrl=${{ inputs.base_url }}
+        run: ${{ env.CLI_TEST }} --ci-build-id ${{ env.CURRENTS_BUILD_ID }} --config baseUrl=${{ env.BASE_URL }}
         timeout-minutes: 5
